tests/jastadd/negative/type_errors/L2/4_TypeCheckingForStmt4.ob
MODULE TestModule;
    VAR j : INTEGER;
BEGIN
	FOR j := 1<2 TO 3 DO
	END
END TestModule.
